--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Wiehl.dk - Et indblik i min verden.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Velkommen til Wiehl.dk</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,9 +30,9 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="index.html">Hjem</a></li>
+								<li><a href="generic.html">Projekter</a></li>
+								<li><a href="elements.html">CV</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
