--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Wiehl.dk - Et indblik i min verden.</title>
+		<title>Wiehl.dk - Christian Wiehl Hejlesen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,8 +42,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<h2>Velkommen til Wiehl.dk</h2>
+							<p>En side der viser hvad jeg, Christian Wiehl Hejlesen, går og laver. Du kan se mit udvidede CV, hvor der er links til nogle af de projekter jeg har været med i.</p>
 						</div>
 					</section>
 
@@ -55,9 +55,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">3D Print.</h2>
+										<p>Jeg gør flittigt brug af 3D print.</a>
 									</div>
 								</div>
 							</section>
@@ -67,8 +66,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Madlavning.</h2>
+										<p>Jeg elsker at lave mad, elsker køkken grej og maskiner, og har sikkert i nogles mening for mange, men hva' man kan da ikke få for meget grej 😉.</br>Jeg kan nørde længe med opskrifter, for liiige at få den helt rigtige hævning på en dej, eller den rigtige syrlighed på tomatsovsen.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
